--- a/blog-project/package.json
+++ b/blog-project/package.json
@@ -17,9 +17,13 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
-    "react-multi-carousel": "^2.8.5"
+    "react-markdown": "^9.0.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
